--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family:Inconsolata;
+    font-family:Inconsolata, monospace;
     font-size: large;
 }
 
@@ -51,3 +51,4 @@ main {
 footer {
     background-color: dodgerblue;
 }
+/*REORGANIZAR EL CODIGO PARA QUE SEA MAS LEGIBLE*/
