--- a/style/style.css
+++ b/style/style.css
@@ -4,6 +4,7 @@ body {
     flex-direction: column;
     font-family:Inconsolata, monospace;
     font-size: large;
+
 }
 
 header {
@@ -17,6 +18,7 @@ main {
     background-color: lightskyblue;
     border-top: 3px solid gray;
     border-bottom: 3px solid gray;
+    padding: 10px;
 }
 
 footer {
@@ -47,13 +49,12 @@ button {
     background-color: darkblue;
     border: none;
     color: white;
-    border-radius: 10%;
+    border-radius: 10px;
 }
 
 @media screen and (min-width:769px) {
     .indexGridContainer {
         display: grid;
-        margin: 10px;
         column-gap: 10px;
         grid-template-columns: 3fr 3fr 4fr;
         grid-template-rows: auto;
@@ -67,7 +68,6 @@ button {
 @media screen and (max-width:768px) {
     .indexGridContainer {
         display: grid;
-        margin: 10px;
         row-gap: 10px;
         grid-template-columns: auto;
         grid-template-rows: auto;
@@ -108,5 +108,55 @@ button {
 .imagen img {
     width: 100%;
     object-fit: contain;
+}
+
+
+@media screen and (min-width:769px) {
+    .contactBox {
+    height:min-content;
+    width: 50%;
+    display: inline-block;
+    text-align: center;
+    padding: 10px;
+    box-sizing: border-box;
+    vertical-align: middle;
+    }
+}
+
+@media screen and (max-width:768px) {
+    .contactBox {
+    height:min-content;
+    width: 100%;
+    display: inline-block;
+    text-align: center;
+    border: 1px solid #ccc;
+    padding: 10px;
+    box-sizing: border-box;
+    vertical-align: middle;
+    }
+}
+
+form {
+    margin: 10px;
+}
+
+input, textarea {
+    width: 95%;
+    border-radius: 10px;
+    border: 3px solid black;
+    margin: 5px;
+    display: block;
+}
+
+.contactBox i {
+    font-size: 2rem;
+}
+
+iframe {
+    width: 100%;
+    height: 400px;
+    border-radius: 10px;
+    border: 3px solid black;
+    margin: 5px;
 }
 /*REORGANIZAR EL CODIGO PARA QUE SEA MAS LEGIBLE*/  
