--- a/style/style.css
+++ b/style/style.css
@@ -41,10 +41,6 @@ footer {
     width: 70px;
 }
 
-.imagenesExtra {
-    width: 30%;
-}
-
 button {
     background-color: darkblue;
     border: none;
@@ -157,5 +153,46 @@ iframe {
     border-radius: 10px;
     border: 3px solid black;
     margin: 5px;
+}
+
+
+@media screen and (min-width:769px) {
+    .contmayor {
+        display: flex;
+        flex-direction: row;
+    }
+
+    .nosotrosText {
+        display: flex;
+        flex-direction: column;
+        width: 60%;
+    }
+
+    .nosotrosImages {
+        display: flex;
+        flex-direction: column;
+        margin: auto;
+        align-items: center;
+        width: 40%;
+    }
+}
+
+@media screen and (max-width:768px) {
+    .nosotrosText {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .nosotrosImages {
+        display: flex;
+        flex-direction: column;
+        margin: auto;
+        align-items: center;
+    }
+}
+
+.nosotrosImages img {
+    width: 75%;
+    margin: 20px;
 }
 /*REORGANIZAR EL CODIGO PARA QUE SEA MAS LEGIBLE*/  
