--- a/style/style.css
+++ b/style/style.css
@@ -195,4 +195,16 @@ iframe {
     width: 75%;
     margin: 20px;
 }
+
+.product {
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(161, 161, 161);
+    padding: ;
+    margin: 5px;
+    border: 3px solid black;
+}
+
 /*REORGANIZAR EL CODIGO PARA QUE SEA MAS LEGIBLE*/  
+
+
