--- a/style/style.css
+++ b/style/style.css
@@ -200,7 +200,7 @@ iframe {
     display: flex;
     flex-direction: column;
     background-color: rgb(161, 161, 161);
-    padding: ;
+    padding: 5px;
     margin: 5px;
     border: 3px solid black;
 }
