--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,4 @@
+/*Estructura general*/
 body {
     min-height: 100vh;
     display: flex;
@@ -11,7 +12,6 @@ header {
     font-size: larger;
     background-color: deepskyblue;
 }
-
 
 main {
     flex-grow: 1;    
@@ -41,13 +41,7 @@ footer {
     width: 70px;
 }
 
-button {
-    background-color: darkblue;
-    border: none;
-    color: white;
-    border-radius: 10px;
-}
-
+/*Media queries*/
 @media screen and (min-width:769px) {
     .indexGridContainer {
         display: grid;
@@ -64,11 +58,13 @@ button {
 @media screen and (max-width:768px) {
     .indexGridContainer {
         display: grid;
+        row-gap: 10px;
         grid-template-columns: auto;
         grid-template-rows: auto;
         grid-template-areas:
-        "titulo precio"
+        "titulo titulo"
         "parrafo parrafo"
+        "botones botones"
         "imagen imagen";
     }
 }
@@ -84,44 +80,6 @@ button {
         "parrafo parrafo imagen";
     }
 }
-
-.titulo {
-    grid-area: titulo;
-    text-align: center;
-}
-
-.precio {
-    grid-area: precio;
-    text-align: center;
-}
-
-.parrafo {
-    grid-area: parrafo;
-    text-align: center;
-}
-
-.botones {
-    grid-area: botones;
-    display: flex;
-    justify-content: space-evenly;
-    text-align: center;
-}
-
-.imagen {
-    grid-area: imagen;
-    border-left: 3px;
-    align-self: center;
-}
-
-.parrafo p {
-    width: 100%;
-}
-
-.imagen img {
-    width: 100%;
-    object-fit: contain;
-}
-
 
 @media screen and (min-width:769px) {
     .contactBox {
@@ -147,33 +105,8 @@ button {
     }
 }
 
-form {
-    margin: 10px;
-}
-
-input, textarea {
-    width: 95%;
-    border-radius: 10px;
-    border: 3px solid black;
-    margin: 5px;
-    display: block;
-}
-
-.contactBox i {
-    font-size: 2rem;
-}
-
-iframe {
-    width: 100%;
-    height: 400px;
-    border-radius: 10px;
-    border: 3px solid black;
-    margin: 5px;
-}
-
-
 @media screen and (min-width:769px) {
-    .contmayor {
+    .allContainer {
         display: flex;
         flex-direction: row;
     }
@@ -207,9 +140,79 @@ iframe {
     }
 }
 
+/*Areas de grids*/
+.titulo {
+    grid-area: titulo;
+    text-align: center;
+}
+
+.precio {
+    grid-area: precio;
+    text-align: center;
+}
+
+.parrafo {
+    grid-area: parrafo;
+    text-align: center;
+}
+
+.botones {
+    grid-area: botones;
+    display: flex;
+    justify-content: space-evenly;
+    text-align: center;
+}
+
+.imagen {
+    grid-area: imagen;
+    border-left: 3px;
+    align-self: center;
+}
+
+/*Partes especificas*/
+button {
+    background-color: darkblue;
+    border: none;
+    color: white;
+    border-radius: 10px;
+}
+
+.parrafo p {
+    width: 100%;
+}
+
+.imagen img {
+    width: 100%;
+    object-fit: contain;
+}
+
 .nosotrosImages img {
     width: 75%;
     margin: 20px;
+}
+
+form {
+    margin: 10px;
+}
+
+input, textarea {
+    width: 95%;
+    border-radius: 10px;
+    border: 3px solid black;
+    margin: 5px;
+    display: block;
+}
+
+.contactBox i {
+    font-size: 2rem;
+}
+
+iframe {
+    width: 100%;
+    height: 400px;
+    border-radius: 10px;
+    border: 3px solid black;
+    margin: 5px;
 }
 
 .product {
@@ -220,7 +223,3 @@ iframe {
     margin: 5px;
     border: 3px solid black;
 }
-
-/*REORGANIZAR EL CODIGO PARA QUE SEA MAS LEGIBLE*/  
-
-
