--- a/style/style.css
+++ b/style/style.css
@@ -5,7 +5,7 @@ body {
     flex-direction: column;
     font-family:Inconsolata, monospace;
     font-size: large;
-
+    overflow-x: hidden;
 }
 
 header {
@@ -78,30 +78,6 @@ footer {
         grid-template-areas:
         "titulo precio imagen"
         "parrafo parrafo imagen";
-    }
-}
-
-@media screen and (min-width:769px) {
-    .contactBox {
-    height:min-content;
-    width: 50%;
-    display: inline-block;
-    text-align: center;
-    padding: 10px;
-    box-sizing: border-box;
-    vertical-align: middle;
-    }
-}
-
-@media screen and (max-width:768px) {
-    .contactBox {
-    height:min-content;
-    width: 100%;
-    display: inline-block;
-    text-align: center;
-    padding: 10px;
-    box-sizing: border-box;
-    vertical-align: middle;
     }
 }
 
@@ -203,7 +179,7 @@ input, textarea {
     display: block;
 }
 
-.contactBox i {
+.contactIcons {
     font-size: 2rem;
 }
 
@@ -212,7 +188,6 @@ iframe {
     height: 400px;
     border-radius: 10px;
     border: 3px solid black;
-    margin: 5px;
 }
 
 .product {
