--- a/style/style.css
+++ b/style/style.css
@@ -41,6 +41,112 @@ footer {
     width: 70px;
 }
 
+
+
+/*Areas de grids*/
+.titulo {
+    grid-area: titulo;
+    text-align: center;
+}
+
+.precio {
+    grid-area: precio;
+    text-align: center;
+}
+
+.parrafo {
+    grid-area: parrafo;
+    text-align: center;
+}
+
+.botones {
+    grid-area: botones;
+    display: flex;
+    justify-content: space-evenly;
+    text-align: center;
+}
+
+.imagen {
+    grid-area: imagen;
+    border-left: 3px;
+    align-self: center;
+}
+
+.productoCarousel {
+    grid-area: productoCarousel;
+    align-self: center;
+}
+
+.producto1 {
+    grid-area: producto1;
+}
+
+.producto2 {
+    grid-area: producto2;
+}
+
+.producto3 {
+    grid-area: producto3;
+}
+
+.producto4 {
+    grid-area: producto4;
+}
+
+/*Partes especificas*/
+button {
+    background-color: darkblue;
+    border: none;
+    color: white;
+    border-radius: 10px;
+}
+
+.parrafo p {
+    width: 100%;
+}
+
+.imagen img {
+    width: 100%;
+    object-fit: contain;
+}
+
+.nosotrosImages img {
+    width: 75%;
+    margin: 20px;
+}
+
+form {
+    margin: 10px;
+}
+
+input, textarea {
+    width: 95%;
+    border-radius: 10px;
+    border: 3px solid black;
+    margin: 5px;
+    display: block;
+}
+
+.contactIcons {
+    font-size: 2rem;
+}
+
+iframe {
+    width: 100%;
+    height: 400px;
+    border-radius: 10px;
+    border: 3px solid black;
+}
+
+.producto1, .producto2, .producto3, .producto4 {
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(161, 161, 161);
+    padding: 5px;
+    margin: 5px;
+    border: 3px solid black;
+}
+
 /*Media queries*/
 @media screen and (min-width:769px) {
     .indexGridContainer {
@@ -66,6 +172,65 @@ footer {
         "parrafo parrafo"
         "botones botones"
         "imagen imagen";
+    }
+}
+
+@media screen and (min-width:769px) {
+    .productosGridContainer {
+        display: grid;
+        column-gap: 10px;
+        grid-template-columns: 4fr 3fr 3fr;
+        grid-template-rows: auto;
+        grid-template-areas:
+        "titulo titulo titulo"
+        "productoCarousel producto1 producto2"
+        "productoCarousel producto3 producto4";
+    }
+}
+
+@media screen and (max-width:768px) {
+    .productosGridContainer {
+        display: grid;
+        grid-template-areas:
+        "titulo titulo"
+        "productoCarousel producto1"
+        "productoCarousel producto2"
+        "producto3 producto4";
+    }
+}
+
+@media screen and (max-width:480px) {
+    .productosGridContainer {
+        display: grid;
+        grid-template-areas:
+        "titulo"
+        "productoCarousel"
+        "producto1"
+        "producto2"
+        "producto3"
+        "producto4";
+    }
+    
+    .producto1, .producto2, .producto3, .producto4 {
+        display: grid;
+        align-content: center;
+        grid-template-areas: 
+        "imagen titulo"
+        "imagen precio";
+    }
+    
+    .tituloProducto {
+        align-self: center;
+        grid-area: titulo;
+    }
+    
+    .precioProducto {
+        align-self: center;
+        grid-area: precio;
+    }
+    
+    .imagenProducto {
+        grid-area: imagen;
     }
 }
 
@@ -114,87 +279,4 @@ footer {
         margin: auto;
         align-items: center;
     }
-}
-
-/*Areas de grids*/
-.titulo {
-    grid-area: titulo;
-    text-align: center;
-}
-
-.precio {
-    grid-area: precio;
-    text-align: center;
-}
-
-.parrafo {
-    grid-area: parrafo;
-    text-align: center;
-}
-
-.botones {
-    grid-area: botones;
-    display: flex;
-    justify-content: space-evenly;
-    text-align: center;
-}
-
-.imagen {
-    grid-area: imagen;
-    border-left: 3px;
-    align-self: center;
-}
-
-/*Partes especificas*/
-button {
-    background-color: darkblue;
-    border: none;
-    color: white;
-    border-radius: 10px;
-}
-
-.parrafo p {
-    width: 100%;
-}
-
-.imagen img {
-    width: 100%;
-    object-fit: contain;
-}
-
-.nosotrosImages img {
-    width: 75%;
-    margin: 20px;
-}
-
-form {
-    margin: 10px;
-}
-
-input, textarea {
-    width: 95%;
-    border-radius: 10px;
-    border: 3px solid black;
-    margin: 5px;
-    display: block;
-}
-
-.contactIcons {
-    font-size: 2rem;
-}
-
-iframe {
-    width: 100%;
-    height: 400px;
-    border-radius: 10px;
-    border: 3px solid black;
-}
-
-.product {
-    display: flex;
-    flex-direction: column;
-    background-color: rgb(161, 161, 161);
-    padding: 5px;
-    margin: 5px;
-    border: 3px solid black;
 }
