--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,3 +1,8 @@
+.producto4, .producto3, .producto2, .producto1, iframe, input, textarea, button, .productoCarousel, .nosotrosImages img, .imagen img {
+  border: 3px solid black;
+  border-radius: 10px;
+}
+
 body {
   min-height: 100vh;
   display: flex;
@@ -69,11 +74,13 @@ footer {
 .imagen img {
   width: 100%;
   object-fit: contain;
+  border-width: 2px;
 }
 
 .nosotrosImages img {
   width: 75%;
   margin: 20px;
+  border-width: 2px;
 }
 
 .productoCarousel {
@@ -85,7 +92,6 @@ button {
   background-color: darkblue;
   border: none;
   color: white;
-  border-radius: 10px;
 }
 
 form {
@@ -94,8 +100,6 @@ form {
 
 input, textarea {
   width: 95%;
-  border-radius: 10px;
-  border: 3px solid black;
   margin: 5px;
   display: block;
 }
@@ -107,8 +111,6 @@ input, textarea {
 iframe {
   width: 100%;
   height: 400px;
-  border-radius: 10px;
-  border: 3px solid black;
 }
 
 .nosotrosText {
@@ -123,44 +125,28 @@ iframe {
   align-items: center;
 }
 
-.producto1 {
-  grid-area: producto1;
+.producto4, .producto3, .producto2, .producto1 {
   display: flex;
   flex-direction: column;
   background-color: #a1a1a1;
   padding: 5px;
   margin: 5px;
-  border: 3px solid black;
+}
+
+.producto1 {
+  grid-area: producto1;
 }
 
 .producto2 {
   grid-area: producto2;
-  display: flex;
-  flex-direction: column;
-  background-color: #a1a1a1;
-  padding: 5px;
-  margin: 5px;
-  border: 3px solid black;
 }
 
 .producto3 {
   grid-area: producto3;
-  display: flex;
-  flex-direction: column;
-  background-color: #a1a1a1;
-  padding: 5px;
-  margin: 5px;
-  border: 3px solid black;
 }
 
 .producto4 {
   grid-area: producto4;
-  display: flex;
-  flex-direction: column;
-  background-color: #a1a1a1;
-  padding: 5px;
-  margin: 5px;
-  border: 3px solid black;
 }
 
 @media screen and (min-width: 769px) {
@@ -239,7 +225,7 @@ iframe {
     width: 60%;
   }
   .nosotrosContainer .nosotrosImages {
-    width: 40%;
+    width: 60%;
   }
 }
 
