--- a/SCSS/components/_queries.scss
+++ b/SCSS/components/_queries.scss
@@ -94,11 +94,11 @@
         display: flex;
         flex-direction: row;
         .nosotrosText {
-            width: 60%;
+            @include size(60%);
         }
 
         .nosotrosImages {
-            width: 40%;
+            @include size(60%);
         }
     }
 }
