--- a/SCSS/components/_queries.scss
+++ b/SCSS/components/_queries.scss
@@ -35,8 +35,9 @@
         "productoCarousel producto3 producto4";
     }
 
-    @media screen and (max-width:$tabletBreakpoint) {
+    @media screen and (max-width:$tabletBreakpoint) and (min-width:$mobileBreakpoint) {
         display: grid;
+        grid-template-columns: 1fr 1fr;
         grid-template-areas:
         "titulo titulo"
         "productoCarousel producto1"
@@ -60,6 +61,7 @@
             grid-template-areas: 
             "imagen titulo"
             "imagen precio";
+            grid-template-columns: 1fr 1fr;
             .tituloProducto {
                 align-self: center;
                 grid-area: titulo;
@@ -83,6 +85,7 @@
         margin: 10px;
         grid-template-columns: 3fr 3fr 4fr;
         grid-template-rows: auto;
+        column-gap: 10px;
         grid-template-areas:
         "titulo precio imagen"
         "parrafo parrafo imagen";
