--- a/SCSS/components/_header.scss
+++ b/SCSS/components/_header.scss
@@ -1,6 +1,10 @@
 header {
+    position: sticky;
+    top: 0;
+    z-index: 2;
     font-size: larger;
     background-color: #00bfff;
+    border-bottom: 3px solid $edgesColor;
 
     nav div .navbar-brand {
     max-width: 200px;
